--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,8 @@
  * Content
  ******************************************************************************/
 
- body {
+body {
+    font-family: 'Quicksand', sans-serif;
    padding-bottom: 70px;
    color: $text-color;
  }
