--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,40 @@
     <nav id="navbar" class="navbar navbar-light bg-white navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}">
     <div class="container">
       {% if page.title != "about" %}
-        {% assign name = site.title | split: ' ' %}
-        <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl | prepend: site.url }}/"><span class="font-weight-bold">{{ name | first }}</span> {{ name | last }}</a>
+      {% assign name = site.title | split: ' ' %}
+
+      <!-- add logo -->
+      <!--
+      <a class="site-title" href="{{ full_base_url }}/">
+	{% if site.logo %}
+        <img
+	  src="{{ 'logo-icon-white.png' | prepend: '/assets/img/' | prepend: site.baseurl | prepend: site.url }}"
+-->
+	   <!--    
+src="{{ full_base_url }}/{{ site.logo }}"
+-->
+
+<!--
+	   class="site-logo" width="2px" height="2px">
+	{% else %}
+        {{ site.title | escape }}
+	{% endif %}
+      </a>
+      -->
+	   
+      <!--
+      <a class="site-title" href="{{ site.baseurl | prepend: site.url }}/"><img style="display: inline-block; vertical-align: middle; padding-right: 2px; margin-bottom: 8px" src="{{ 'logo-icon-white.png' | prepend: '/assets/img/' | prepend: site.baseurl | prepend: site.url }}"</a>
+-->      
+      
+	<!-- <span class="font-weight-bold"> -->
+	<!-- <div class="logo-wrapper"> -->
+        <a href="{{ site.baseurl | prepend: site.url }}/"><img src="/assets/img/logo-horizontal-white-crop.png" height="40px" class="top-logo"></a>
+        <!-- </div> -->
+      <!-- <a class="navbar-brand title font-weight-bold" href="{{ site.baseurl | prepend: site.url }}/"> -->
+      <!-- 	{{ name | first }} -->
+      <!-- 	<\!-- </span> {{ name | last }} -\-> <\!-- remove double header -\-> -->
+      <!-- 		<\!-- </span> -\-> -->
+      <!-- </a> -->
       {% elsif site.show_social_icons %}
         <!-- Social Icons -->
         <div class="row ml-1 ml-sm-0">
@@ -42,7 +74,9 @@
           </li>
           {% endif %}
           <!-- Other pages -->
-          {% assign sorted_pages = site.pages | sort: "title" %}
+          <!-- {% assign sorted_pages = site.pages | sort: "title" %} -->
+	  <!-- NOTE order of navbar determined with order in YAML -->
+          {% assign sorted_pages = site.pages | sort: "order" %}
           {% for p in sorted_pages %}
           {% if p.nav and p.autogen == nil %}
           <li class="nav-item {% if page.title == p.title %}active{% endif %}">
