--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -23,8 +23,15 @@
             {% if author.last == site.scholar.last_name %}
               <em>{{author.last}}, {{author.first}}</em>
             {% else %}
-              {{author.last}}, {{author.first}}
-            {% endif %}
+              <!-- {{author.last}}, {{author.first}} -->
+	      <!-- added --> 
+	      {% if site.data.coauthors[author.last] %}
+              <a href="{{site.data.coauthors[author.last].url}}" target="_blank">{{author.last}}, {{author.first}}</a> <!-- FIXME full stop --->
+              {% else %}
+	      {{author.last}}, {{author.first | slice:0}}.  
+              {% endif %}
+	      <!-- added -->
+	      {% endif %}  
           {% else %}
             {% unless forloop.last %}
               {% if author.last == site.scholar.last_name %}
@@ -33,7 +40,8 @@
                 {% if site.data.coauthors[author.last] %}
                   <a href="{{site.data.coauthors[author.last].url}}" target="_blank">{{author.last}}, {{author.first}}</a>,
                 {% else %}
-                  {{author.last}}, {{author.first}},
+                  <!-- {{author.last}}, {{author.first}}, -->
+                  {{author.last}}, {{author.first | slice:0}}.,
                 {% endif %}
               {% endif %}
             {% else %}
@@ -43,7 +51,8 @@
                 {% if site.data.coauthors[author.last] %}
                   and <a href="{{site.data.coauthors[author.last].url}}" target="_blank">{{author.last}}, {{author.first}}</a>
                 {% else %}
-                  and {{author.last}}, {{author.first}}
+                  <!-- and {{author.last}}, {{author.first}} -->
+                  and {{author.last}}, {{author.first | slice:0}}.
                 {% endif %}
               {% endif %}
             {% endunless %}
@@ -65,13 +74,16 @@
 
     <span class="links">
     {% if entry.abstract %}
-      [<a class="abstract">Abs</a>]
+      [<a class="abstract">abstract</a>]
     {% endif %}
     {% if entry.arxiv %}
       [<a href="http://arxiv.org/abs/{{ entry.arxiv }}" target="_blank">arXiv</a>]
     {% endif %}
-    {% if entry.html %}
-      [<a href="{{ entry.html }}" target="_blank">HTML</a>]
+    {% if entry.preprint %}
+      [<a href="{{ entry.preprint }}" target="_blank">preprint</a>]
+    {% endif %}
+    {% if entry.url %}
+      [<a href="{{ entry.url }}" target="_blank">doi</a>]
     {% endif %}
     {% if entry.pdf %}
       [<a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" target="_blank">PDF</a>]
@@ -88,6 +100,15 @@
     {% if entry.code %}
       [<a href="{{ entry.code }}" target="_blank">Code</a>]
     {% endif %}
+
+    <!-- bib entry -->
+
+    {% if entry.bibtex %}
+    [<a class="bibtex">bib</a>]
+    {% endif %}
+
+    <!-- <div><pre>{{ entry.bibtex }}</pre></div> -->
+    
     </span>
 
     <!-- Hidden abstract block -->
@@ -96,5 +117,13 @@
       <p>{{ entry.abstract }}</p>
     </span>
     {% endif %}
+
+    <!-- Hidden bibtex block -->
+    {% if entry.bibtex %}
+    <span class="bibtex hidden">
+    <div><pre>{{ entry.bibtex }}</pre></div>
+    </span>
+    {% endif %}
+    
   </div>
 </div>
