--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,6 +8,13 @@
 $max-content-width: 800px;
 
 // Colors
+
+$white-color: #ffffff !default;
+$maroon-color: #966256 !default;
+$sienna-color: #ffc46e !default;
+$beige-color: #fee4a0 !default;
+$brown-color: #844d2f !default;
+$burnt-color: #eb942f !default;
 $red-color:           #FF3636 !default;
 $red-color-dark:      #B71C1C !default;
 $orange-color:        #F29105 !default;
@@ -29,7 +36,7 @@ $grey-color-light:    lighten($grey-color, 40%);
 $grey-color-dark:     darken($grey-color, 25%);
 
 /* Set theme colors *************************/
-$theme-color:         $purple-color;
+$theme-color:         $maroon-color;
 
 $link-color:          $theme-color;
 $text-color:          #111 !default;
